--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+reqwest = {version = "0.12.12", features = ["blocking"]}
+scraper = "0.23.1"
+csv = "1.1"
+xlsxwriter = "0.6.1"
+chrono = "0.4.22"
